# ArchiChain

./: .gitignore  CMakeLists.txt  Makefile  README.md  block.c  block.h  build.bat  config.ini  main.c  menu.c  menu.h  network.c  network.h  performance.c  performance.h  pi.c  pi.h  test.c  utils.c  utils.h  wallet.c  wallet.h
.github/workflows/: cmake-multi-platform.yml
